--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.11",
+    "@google-cloud/speech": "^3.4.0",
     "@material-ui/core": "^4.0.0",
     "@material-ui/icons": "^3.0.1",
     "@material-ui/pickers": "^3.2.7",
@@ -45,6 +46,7 @@
     "express-http-proxy": "1.0.6",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "node-record-lpcm16": "^1.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.3.0",
     "react-addons-update": "^15.6.2",
