--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
   "dependencies": {
     "@date-io/date-fns": "^1.3.11",
     "@google-cloud/speech": "^3.4.0",
+    "@google-cloud/storage": "^4.1.3",
     "@material-ui/core": "^4.0.0",
     "@material-ui/icons": "^3.0.1",
     "@material-ui/pickers": "^3.2.7",
+    "@polymer/polymer": "^3.3.1",
+    "actions-on-google": "^2.12.0",
     "amortization": "^1.1.1",
     "axios": "0.16.2",
     "babel-preset-env": "^1.7.0",
@@ -44,9 +47,13 @@
     "date-fns": "2.1.0",
     "express": "^4.17.1",
     "express-http-proxy": "1.0.6",
+    "fast-crc32c": "^2.0.0",
+    "google-auth-library": "^5.5.1",
+    "googleapis": "^45.0.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "node-record-lpcm16": "^1.0.1",
+    "obvi-component": "^3.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.3.0",
     "react-addons-update": "^15.6.2",
@@ -71,7 +78,10 @@
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
     "redux-thunk": "2.2.0",
+    "request": "^2.88.0",
     "serialize-javascript": "1.4.0",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.2",
     "webpack-merge": "^4.1.4",
